Added clean target

--- a/build.yml
+++ b/build.yml
@@ -24,3 +24,8 @@
   script:
   - "#{build_dir}/#{name} #{args}"
 
+- target:      clean
+  description: Delete generated files
+  script:
+  - rmdir: :build_dir
+
