--- a/etc/gontinuum.yml
+++ b/etc/gontinuum.yml
@@ -1,13 +1,12 @@
 directory: /tmp
 email:
-  smtp_host: smtp.orange.fr
+  smtp_host: smtp.orange.fr:25
   recipient: casa@sweetohm.net
   sender:    casa@sweetohm.net
-  success:   true
+  success:   false
 
 modules:
   continuum:
     url:     https://github.com/c4s4/continuum.git
     command: |
       echo "TEST"
-
