--- a/build.yml
+++ b/build.yml
@@ -3,19 +3,23 @@
   default:     run
 
 - properties:
-    name:       "gontinuum"
-    package:    "github.com/c4s4/#{name}"
-    version:    "0.1.0"
-    bin_dir:    "bin"
-    src_dir:    "src"
-    main:       "#{src_dir}/#{package}/#{name}.go"
-    etc_dir:    "etc"
-    etc_file:   "#{etc_dir}/#{name}.yml"
-    args:       :etc_file
+    name:        "gontinuum"
+    package:     "github.com/c4s4/#{name}"
+    version:     "0.1.0"
+    build_dir:   "build"
+    bin_dir:     "bin"
+    src_dir:     "src"
+    main:        "#{src_dir}/#{package}/#{name}.go"
+    etc_dir:     "etc"
+    etc_file:    "#{etc_dir}/#{name}.yml"
+    args:        :etc_file
+    clean_dirs:  :build_dir
+    clean_files: ["#{bin_dir}/#{name}"]
 
 - target:      bin
   description: Make binary executable
   script:
+  - print: "Building project #{name}..."
   - rm: "#{bin_dir}/#{name}"
   - "go build -o #{bin_dir}/#{name} #{main}"
 
@@ -25,3 +29,9 @@
   script:
   - "#{bin_dir}/#{name} #{args}"
 
+- target:      clean
+  description: Clean generated files
+  script:
+  - rmdir: :clean_dirs
+  - rm:    :clean_files
+  
