Added a target to generate code documentation

--- a/build.yml
+++ b/build.yml
@@ -35,6 +35,11 @@
   script:
   - "go test #{package}"
 
+- target:      doc
+  description: Generate code documentation
+  script:
+  - "godoc #{package}"
+
 - target:      virtualenv
   description: Check that we are running in virtualenv
   script:
