Changed config file for email

--- a/etc/gontinuum.yml
+++ b/etc/gontinuum.yml
@@ -1,8 +1,8 @@
 directory:   /tmp
 repo_status: /tmp/repo-hash.yml
 email:
-  #smtp_host: smtp.orange.fr:25
-  smtp_host: smtp.srvc.cvf:25
+  smtp_host: smtp.orange.fr:25
+  #smtp_host: smtp.srvc.cvf:25
   recipient: casa@sweetohm.net
   sender:    casa@sweetohm.net
   success:   true
