--- a/CHANGELOG.yml
+++ b/CHANGELOG.yml
@@ -1,3 +1,9 @@
+- version: 0.2.0
+  date:    2016-06-24
+  summary: Added branch in project configuration
+  added:
+  - "Added branch property in project configuration."
+
 - version: 0.1.0
   date:    2016-05-12
   summary: First public release
