--- a/gontinuum.yml
+++ b/gontinuum.yml
@@ -2,17 +2,20 @@ directory:   /tmp
 repo_hash:   /tmp/repo-hash.yml
 port:        6666
 email:
-  smtp_host: smtp.orange.fr:25
-  #smtp_host: smtp.srvc.cvf:25
-  recipient: casa@sweetohm.net
-  sender:    casa@sweetohm.net
+  smtp_host: smtp.foo.com:25
+  recipient: somebody@somewhere.net
+  sender:    somebody@somewhere.net
   success:   true
 modules:
   - name:    continuum
     url:     https://github.com/c4s4/continuum.git
+    branch:  develop
     command: |
-      echo "TEST"
+      set -e
+      commands to run tests
   - name:    gontinuum
     url:     ssh://casa@sweetohm.net/home/git/gontinuum.git
+    branch:  master
     command: |
-      echo "TEST"
+      set -e
+      commands to run tests
