--- a/CHANGELOG.yml
+++ b/CHANGELOG.yml
@@ -3,6 +3,8 @@
   summary: ???
   added:
   - "Print start time on the console."
+  fixed:
+  - "Clone module into directory of its name".
 
 - version: 0.2.0
   date:    2016-06-27
