--- a/CHANGELOG.yml
+++ b/CHANGELOG.yml
@@ -1,3 +1,9 @@
+- version: 0.4.0
+  date:    2016-07-??
+  summary: ???
+  changed:
+  - "Changement du nom du projet pour continuum."
+
 - version: 0.3.0
   date:    2016-06-29
   summary: Minor improvements and bug fixes
