--- a/CHANGELOG.yml
+++ b/CHANGELOG.yml
@@ -1,6 +1,8 @@
 - version: 0.4.0
   date:    2016-07-??
-  summary: ???
+  summary: Improved email management
+  added:
+  - "Improved email configuration."
   changed:
   - "Changement du nom du projet pour continuum."
 
