--- a/continuum.yml
+++ b/continuum.yml
@@ -1,13 +1,14 @@
-directory:   /tmp
-repo_hash:   /tmp/repo-hash.yml
-port:        6666
-email: ~
-#  smtp_host: smtp.foo.com:25
-#  recipient: somebody@somewhere.net
-#  sender:    somebody@somewhere.net
-#  success:   true
+directory: /tmp
+status:    /tmp/continuum-status.yml
+port:      6666
+email:
+  smtp-host: smtp.nowhere.com:25
+  recipient: nobody@nowhere.com
+  sender:    nobody@nowhere.com
+  success:   true
+  once:      true
 modules:
-  - name:    continuum
+  - name:    Continuum
     url:     https://github.com/c4s4/continuum.git
     branch:  develop
     command: |
