--- a/CHANGELOG.yml
+++ b/CHANGELOG.yml
@@ -1,5 +1,5 @@
 - version: 0.4.0
-  date:    2016-07-??
+  date:    2016-07-01
   summary: Improved email management
   added:
   - "Improved email configuration."
