--- a/CHANGELOG.yml
+++ b/CHANGELOG.yml
@@ -1,3 +1,9 @@
+- version: 0.4.1
+  date:    2016-08-09
+  summary: Print error message on stderr
+  fixed:
+  - "Print error message when another instance is running on stderr."
+
 - version: 0.4.0
   date:    2016-07-01
   summary: Improved email management
