--- a/CHANGELOG.yml
+++ b/CHANGELOG.yml
@@ -2,7 +2,7 @@
 
 - version: 0.4.2-SNAPSHOT
   date:    2017-00-00
-  summery: ???
+  summary: NeON build file
   fixed:
   - "Replaced Makefile with NeON build file."
 
