--- a/CHANGELOG.yml
+++ b/CHANGELOG.yml
@@ -1,11 +1,11 @@
 # Semantic changelog (http://github.com/c4s4/changelog)
 
-- version: 0.4.2-SNAPSHOT
-  date:    2017-00-00
-  summary: NeON build file
+- version: 0.5.0
+  date:    2017-08-12
+  summary: Added NeON build file and reports
   added:
   - "Replaced Makefile with NeON build file."
-  - "Added travis configuration file."
+  - "Added build, coverage and quality reports."
 
 - version: 0.4.1
   date:    2016-08-09
